@@ -3,7 +3,7 @@
  * STATUS.C -  Nagios Status CGI
  *
  * Copyright (c) 1999-2003 Ethan Galstad (nagios@nagios.org)
- * Last Modified: 04-14-2003
+ * Last Modified: 09-09-2003
  *
  * License:
  * 
@@ -297,7 +297,7 @@ int main(void){
 
 		/* right hand column of top row */
 		printf("<td align=center valign=top width=33%%>\n");
-		printf("<table border=0 width=100%>\n");
+		printf("<table border=0 width=100%%>\n");
 		printf("<tr><td>\n");
 		show_service_status_totals();
 		printf("</td></tr>\n");
@@ -1640,7 +1640,7 @@ void show_host_detail(void){
 
 	/* the main list of hosts */
 	printf("<DIV ALIGN='center'>\n");
-	printf("<TABLE BORDER=0 CLASS='status' WIDTH=100%>\n");
+	printf("<TABLE BORDER=0 CLASS='status' WIDTH=100%%>\n");
 	printf("<TR>\n");
 
 	printf("<TH CLASS='status'>Host&nbsp;<A HREF='%s&sorttype=%d&sortoption=%d'><IMG SRC='%s%s' BORDER=0 ALT='Sort by host name (ascending)'></A><A HREF='%s&sorttype=%d&sortoption=%d'><IMG SRC='%s%s' BORDER=0 ALT='Sort by host name (descending)'></A></TH>",temp_url,SORT_ASCENDING,SORT_HOSTNAME,url_images_path,UP_ARROW_ICON,temp_url,SORT_DESCENDING,SORT_HOSTNAME,url_images_path,DOWN_ARROW_ICON);
