@@ -6,7 +6,7 @@ AC_PREFIX_DEFAULT(/usr/local/nagios)
 PKG_NAME=nagios
 PKG_VERSION="1.2"
 PKG_HOME_URL="http://www.nagios.org/"
-PKG_REL_DATE="07-01-2003"
+PKG_REL_DATE="11-22-2003"
 
 dnl Figure out how to invoke "install" and what install options to use.
 AC_PROG_INSTALL
