@@ -36,7 +36,7 @@ Copyright (c) 1999-2002 Ethan Galstad<br>
 <P>
 <div align=center>
 <div align=center CLASS="version">Version 1.2</div>
-<div align=center CLASS="releaseDate">July 01, 2003</div>
+<div align=center CLASS="releaseDate">November 22, 2003</div>
 </div>
 </P>
 
