@@ -6,11 +6,14 @@ Nagios Change Log
 1.2 - ??/??/2003
 ----------------
 * Host stalking bug fix
-* Tac CGI bug fix
 * Embedded Perl bug fix
 * Configure script patch for Solaris (iconv library)
 * Bug fix for segfault in passive check routines
 * Bug fix in service retention logic
+* Segfault fix in debug mode
+* Fix for popup window in statusmap CGI
+* CGI bug fixes (tac, statusmap, histogram, trends)
+* HTML fixes
 
 
 1.1 - 06/02/2003
